--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Installing Node
         uses: actions/setup-node@v2-beta
         with:
-          version: 16
+          node-version: 16
       - name: Github Actions for yarn 
         uses: Borales/actions-yarn@v2.1.0
         with:
