--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -35,7 +35,7 @@ jobs:
           cmd: install
           
       - name: Creating Build
-        run: yarn run build
+        run: yarn build
         
       - name: Installing Surge
         run: npm install surge
